[project]
name = "series-cross-link-suggester"
version = "0.1.0"
description = "Find internal cross-link opportunities across blog series posts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "local-first-common",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
local-first-common = { path = "../local-first-common", editable = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
