[project]
name = "series-cross-link-suggester"
version = "0.1.0"
description = "Find internal cross-link opportunities across blog series posts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "local-first-common",
    "python-frontmatter>=1.1.0",
    "toml>=0.10.2",
    "typer>=0.24.1",
]

[project.scripts]
cross-link = "cross_link.logic:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cross_link"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
local-first-common = { path = "../local-first-common" }

[tool.pytest.ini_options]
pythonpath = ["src"]
